--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "@clerk/clerk-sdk-node": "^5.0.69",
+    "@clerk/nextjs": "^6.3.1",
+    "axios": "^1.7.7",
+    "lodash.debounce": "^4.0.8",
+    "lucide-react": "^0.465.0",
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.3",
+    "next": "15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-google-places-autocomplete": "^4.1.0",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "postcss": "^8",
