--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^5.0.69",
     "@clerk/nextjs": "^6.3.1",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "cookie": "^1.0.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express-validator": "^7.2.1",
     "gsap": "^3.12.5",
@@ -23,6 +26,7 @@
     "mongoose": "^8.8.3",
     "next": "15.0.3",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-places-autocomplete": "^4.1.0",
