--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.465.0",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.8.3",
+    "mongoose": "^8.9.5",
     "next": "15.0.3",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.9.16",
@@ -32,7 +32,8 @@
     "react-google-places-autocomplete": "^4.1.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "postcss": "^8",
