--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express-validator": "^7.2.1",
+    "fs": "^0.0.1-security",
     "gsap": "^3.12.5",
     "jsonwebtoken": "^9.0.2",
     "lodash.debounce": "^4.0.8",
